# flatbuffers-example

./: .gitignore  README.md  go.mod  tree.fbs
evaluation/: eval.go  eval_test.go  generate.go  generate_test.go  rust_eval.go  rust_eval_test.go
rust/expr_tree/: Cargo.toml
rust/expr_tree/src/: expr_tree.h  lib.rs  tree_generated.rs
tree/: BinOp.go  Constant.go  Node.go  Op.go  Root.go
