[package]
name = "expr_tree"
version = "0.1.0"
authors = ["Christopher Wolff <chris.wolff@influxdata.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "expr_tree"
crate-type = ["staticlib"]

[dependencies]
flatbuffers = "2.1.2"